# test_social_network

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint  fixtures.json  pyproject.toml  pytest.ini
app/: apps.py  asgi.py  celery.py  urls.py  wsgi.py
app/clients/: __init__.py  clearbit.py  pyhunter.py
app/settings/: __init__.py  app.py  env.py  logging.py  services.py
app/social_network/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  utils.py  views.py
app/social_network/migrations/: 0001_initial.py  0002_auto_20200323_1930.py  0003_auto_20200324_1551.py
app/tests/: conftest.py  test_api.py  test_app.py
pg-init-scripts/: db.sh
